@@ -8,8 +8,8 @@ return {
 		bankscale = 1,
 		blocking = false,
 		brakerate = 0.033,
-		buildcostenergy = 201287,
-		buildcostmetal = 7847,
+		buildcostenergy = 245000,
+		buildcostmetal = 7850,
 		builder = false,
 		buildpic = "armcyclone.dds",
 		buildtime = 150000,
@@ -34,7 +34,7 @@ return {
 		idletime = 1800,
 		losemitheight = 7,
 		maneuverleashlength = 2500,
-		mass = 7847,
+		mass = 7850,
 		maxdamage = 14500,
 		maxslope = 10,
 		maxvelocity = 7.6,
@@ -122,7 +122,7 @@ return {
 				name = "Mk-83",
 				noselfdamage = true,
 				range = 2100,
-				reloadtime = 21,
+				reloadtime = 20,
 				smoketrail = true,
 				soundhitdry = "xplomed2",
 				soundhitwet = "splsmed",
