@@ -7,7 +7,7 @@ return {
 		blocking = false,
 		brakerate = 0.015,
 		buildcostenergy = 108070,
-		buildcostmetal = 2013,
+		buildcostmetal = 2050,
 		builder = false,
 		buildpic = "armorion.dds",
 		buildtime = 70000,
@@ -32,7 +32,7 @@ return {
 		idletime = 1800,
 		losemitheight = 8,
 		maneuverleashlength = 850,
-		mass = 2913,
+		mass = 2050,
 		maxdamage = 4500,
 		maxslope = 10.5,
 		maxvelocity = 10,
