@@ -1,15 +1,13 @@
 return {
 	coreclipse = {
 		acceleration = 0.07,
-		ai_limit = "limit Tu95-A 6",
-		ai_weight = "weight Tu95-A 4",
 		altfromsealevel = 1,
 		attackrunlength = 302,
 		bankscale = 1.3,
 		blocking = false,
 		brakerate = 0.045,
-		buildcostenergy = 195616,
-		buildcostmetal = 7296,
+		buildcostenergy = 246600,
+		buildcostmetal = 7300,
 		builder = false,
 		buildpic = "coreclipse.dds",
 		buildtime = 150000,
@@ -34,7 +32,7 @@ return {
 		idletime = 1800,
 		losemitheight = 25,
 		maneuverleashlength = 2200,
-		mass = 7296,
+		mass = 7300,
 		maxdamage = 15750,
 		maxslope = 10,
 		maxvelocity = 7.5,
@@ -126,7 +124,7 @@ return {
 				name = "ClusterBombs",
 				noselfdamage = true,
 				range = 2100,
-				reloadtime = 21,
+				reloadtime = 20,
 				smoketrail = true,
 				soundhitdry = "xplomed2",
 				soundhitwet = "splssml",
