@@ -106,7 +106,7 @@ return {
 				areaofeffect = 128,
 				avoidfeature = false,
 				burst = 6,
-				burstrate = 0.28,
+				burstrate = 0.25,
 				collidefriendly = false,
 				commandfire = false,
 				craterareaofeffect = 128,
@@ -130,8 +130,8 @@ return {
 				sprayangle = 300,
 				weapontype = "AircraftBomb",
 				damage = {
-					commanders = 75,
-					default = 150,
+					commanders = 80,
+					default = 160,
 					subs = 5,
 				},
 			},
