@@ -105,8 +105,8 @@ return {
 				accuracy = 750,
 				areaofeffect = 128,
 				avoidfeature = false,
-				burst = 12,
-				burstrate = 0.12,
+				burst = 6,
+				burstrate = 0.05,
 				collidefriendly = false,
 				craterareaofeffect = 128,
 				craterboost = 0,
@@ -129,8 +129,8 @@ return {
 				sprayangle = 2000,
 				weapontype = "AircraftBomb",
 				damage = {
-					commanders = 37.5,
-					default = 75,
+					commanders = 75,
+					default = 150,
 					subs = 5,
 				},
 			},
