@@ -107,8 +107,8 @@ return {
 				accuracy = 750,
 				areaofeffect = 196,
 				avoidfeature = false,
-				burst = 16,
-				burstrate = 0.12,
+				burst = 8,
+				burstrate = 0.05,
 				collidefriendly = false,
 				craterareaofeffect = 128,
 				craterboost = 0,
@@ -131,8 +131,8 @@ return {
 				sprayangle = 2000,
 				weapontype = "AircraftBomb",
 				damage = {
-					commanders = 60,
-					default = 120,
+					commanders = 120,
+					default = 240,
 					subs = 5,
 				},
 			},
