@@ -7,10 +7,10 @@ return {
 		blocking = false,
 		brakerate = 0.04,
 		buildcostenergy = 193555,
-		buildcostmetal = 7530,
+		buildcostmetal = 5530,
 		builder = false,
 		buildpic = "rumad_bomber_lvl3.dds",
-		buildtime = 130000,
+		buildtime = 100000,
 		canattack = true,
 		canfly = true,
 		canguard = true,
@@ -32,9 +32,9 @@ return {
 		losemitheight = 8,
 		maneuverleashlength = 1380,
 		mass = 8130,
-		maxdamage = 13590,
+		maxdamage = 10590,
 		maxslope = 10,
-		maxvelocity = 8.0,
+		maxvelocity = 8.5,
 		maxwaterdepth = 0,
 		mobilestandorders = 1,
 		name = "Desert Cyclone",
@@ -107,8 +107,8 @@ return {
 				accuracy = 750,
 				areaofeffect = 196,
 				avoidfeature = false,
-				burst = 30,
-				burstrate = 0.12,
+				burst = 10,
+				burstrate = 0.05,
 				collidefriendly = false,
 				craterareaofeffect = 128,
 				craterboost = 0,
@@ -123,7 +123,7 @@ return {
 				name = "Bombs",
 				noselfdamage = true,
 				range = 2000,
-				reloadtime = 21,
+				reloadtime = 20,
 				soundhitdry = "xplomed2",
 				soundhitwet = "splslrg",
 				soundhitwetvolume = 0.6,
@@ -131,8 +131,8 @@ return {
 				sprayangle = 2000,
 				weapontype = "AircraftBomb",
 				damage = {
-					commanders = 180,
-					default = 360,
+					commanders = 500,
+					default = 1000,
 					subs = 5,
 				},
 			},
