@@ -5,8 +5,8 @@ return {
 		attackrunlength = 302,
 		bankscale = 1.3,
 		brakerate = 0.045,
-		buildcostenergy = 260139,
-		buildcostmetal = 11281,
+		buildcostenergy = 300500,
+		buildcostmetal = 11280,
 		builder = false,
 		buildpic = "talon_handgod.dds",
 		buildtime = 225000,
@@ -122,7 +122,7 @@ return {
 				name = "ClusterBombs",
 				noselfdamage = true,
 				range = 1250,
-				reloadtime = 25,
+				reloadtime = 20,
 				soundhitdry = "xplomed5",
 				soundhitwet = "splslrg",
 				soundhitwetvolume = 0.6,
