@@ -5,8 +5,8 @@ return {
 		bankscale = 1,
 		blocking = false,
 		brakerate = 0.06,
-		buildcostenergy = 4292,
-		buildcostmetal = 181,
+		buildcostenergy = 4300,
+		buildcostmetal = 180,
 		builder = false,
 		buildpic = "tllbomber.dds",
 		buildtime = 5000,
@@ -31,7 +31,7 @@ return {
 		idletime = 1800,
 		losemitheight = 8,
 		maneuverleashlength = 1280,
-		mass = 181,
+		mass = 180,
 		maxdamage = 605,
 		maxslope = 10,
 		maxvelocity = 8,
